Set package name for syntax test action

--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -31,3 +31,4 @@ jobs:
         with:
           build: ${{ matrix.build }}
           default_packages: ${{ matrix.packages }}
+          package_name: HTML (C#)
