--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -1,4 +1,5 @@
 name: Syntax Tests
+# https://github.com/sublimetext/syntax-test-action
 
 on:
   push:
@@ -17,17 +18,18 @@ on:
 jobs:
   main:
     name: Syntax Tests (${{ matrix.build }})
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
     strategy:
       matrix:
         include:
-          - build: 3211
-            packages: st3
-          - build: 4073
+          - build: latest
             packages: master
-    runs-on: ubuntu-latest
+          - build: 4075
+            packages: binary
     steps:
-      - uses: actions/checkout@v2
-      - uses: SublimeText/syntax-test-action@v1
+      - uses: actions/checkout@v4
+      - uses: SublimeText/syntax-test-action@v2
         with:
           build: ${{ matrix.build }}
           default_packages: ${{ matrix.packages }}
