Set new minimum ST version to 4149

--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -28,7 +28,7 @@ jobs:
             packages: master
           - build: stable
             packages: master
-          - build: 4134  # Need HTML with `html` context for inclusion
+          - build: 4149
             packages: binary
     steps:
       - uses: actions/checkout@v4
