--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -24,10 +24,12 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - build: 4200
-            packages: binary
-          - build: 4157
-            packages: binary
+          - build: latest
+            packages: master
+          - build: stable
+            packages: master
+          # - build: 4201
+          #   packages: binary
     steps:
       - uses: actions/checkout@v4
       - uses: SublimeText/syntax-test-action@v2
