--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -28,8 +28,8 @@ jobs:
             packages: master
           - build: stable
             packages: master
-          # - build: 4201
-          #   packages: binary
+          - build: 4201
+            packages: binary
     steps:
       - uses: actions/checkout@v4
       - uses: SublimeText/syntax-test-action@v2
